fix: input & textarea disabled color on safari

--- a/packages/input/src/index.module.css
+++ b/packages/input/src/index.module.css
@@ -95,6 +95,7 @@
 
 .input:disabled {
     cursor: var(--disabled-cursor);
+    opacity: 1;
 }
 
 /* FOCUS STATE */
