--- a/packages/textarea/src/index.module.css
+++ b/packages/textarea/src/index.module.css
@@ -106,6 +106,7 @@
 
 .textarea:disabled {
     cursor: var(--disabled-cursor);
+    opacity: 1;
 }
 
 /* READ-ONLY STATE */
